Adaptive page about game was fixed (adaptive video and width on mobile)

--- a/style.css
+++ b/style.css
@@ -108,6 +108,21 @@ p {
     float: left;
 }
 
+.thumb-wrap {
+  position: relative;
+  padding-bottom: 56.25%; /* задаёт высоту контейнера для 16:9 (если 4:3 — поставьте 75%) */
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
+}
+.thumb-wrap iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 section:after {
     content: "";
     display: block;
@@ -132,5 +147,20 @@ section:after {
     .screenshots {
         width: 98%;
         margin: 1%;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    nav {
+        display: none;
+    }
+
+    .mmenu {
+        display: block;
+    }
+
+    .wrap {
+        width: 95%;
+        margin-left: 5%;
     }
 }
